<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Subtitulo"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.069" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Titulo"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.16" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <EditText
                android:id="@+id/TxtNombre"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp"
                android:hint="@string/hintNombre"
                android:inputType="text"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/TxtRut"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp"
                android:hint="@string/hintRut"
                android:inputType="text"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/TxtEdad"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp"
                android:hint="@string/hintEdad"
                android:inputType="number"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/TxtCorreo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp"
                android:autofillHints="emailAddress"
                android:hint="@string/hintCorreo"
                android:inputType="textEmailAddress"
                android:textSize="18sp" />


            <EditText
                android:id="@+id/TxtTelefono"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp"
                android:autofillHints="phone"
                android:hint="@string/hintTelefono"
                android:inputType="phone"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/TxtDireccion"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp"
                android:hint="@string/hintDireccion"
                android:inputType="text"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp"
                android:text="@string/lblExperiencia"
                android:textSize="16sp" />

            <RadioGroup
                android:id="@+id/RgExperiencia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rdbExperienciaSi"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/rdbSi"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/rdbExperienciaNo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/rdbNo"
                    android:textSize="18sp" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp"
                android:text="@string/lblMascotas"
                android:textSize="16sp" />

            <RadioGroup
                android:id="@+id/RgMascotas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rdbMascotasSi"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/rdbSi"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/rdbMascotasNo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/rdbNo"
                    android:textSize="18sp" />
            </RadioGroup>

            <EditText
                android:id="@+id/TxtCantidad"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp"
                android:hint="@string/hintCantidad"
                android:inputType="number"
                android:textSize="18sp"
                android:visibility="gone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp"
                android:text="@string/lblEspecie"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/DrpEspecie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp"
                android:text="@string/lblVivienda"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/DrpVivienda"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp"
                android:text="@string/lblSexo"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/DrpSexo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp"
                android:text="@string/lblEdad"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/DrpEdad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp"
                android:text="@string/lblRazon"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/TxtRazon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/hintRazon"
                android:inputType="textMultiLine"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:padding="1dp"
                android:weightSum="2">

                <Button
                    android:id="@+id/btnEnviar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/lblEnviar"
                    android:textSize="16sp" />

                <Space
                    android:layout_width="16dp"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/btnReiniciar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/lblReiniciar"
                    android:textSize="16sp" />
            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>